Remove smiley from package description because of Artifactory

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@boco/sade",
   "version": "1.6.2-boco-2",
-  "description": "Smooth (CLI) operator 🎶",
+  "description": "Smooth (CLI) operator",
   "repository": "lukeed/sade",
   "main": "lib/index.js",
   "license": "MIT",
